force-app/main/default/objects/Booking_Form_Fee_Definition__c/Booking_Form_Fee_Definition__c.object-meta.xml
<CustomObject>
    <label>Booking Form Fee Definition</label>
    <nameField>
        <label>Booking Form Fee Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Form Fee Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>