force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Accommodation_and_Meals__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_and_Meals__c</fullName>
    <formula>Artist_Fee_Definition__r.Accommodation_and_Meals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Amount of People requiring Accommodation and Meals</inlineHelpText>
    <label>Accommodation and Meals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>