force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Artist_Fee_Definition__c.field-meta.xml
<CustomField>
    <fullName>Artist_Fee_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The fee that the artist is booked at for this date</inlineHelpText>
    <label>Artist Fee Definition</label>
    <referenceTo>Artist_Fee_Definition__c</referenceTo>
    <relationshipLabel>Booking Form Fee Definitions</relationshipLabel>
    <relationshipName>Booking_Form_Fee_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>