force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <label>Booking Form</label>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Fee Definitions</relationshipLabel>
    <relationshipName>Booking_Form_Fee_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>