force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>The date that this fee applies to</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>