force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Doordeal__c.field-meta.xml
<CustomField>
    <fullName>Doordeal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the fee is a doordeal</inlineHelpText>
    <label>Doordeal</label>
    <type>Checkbox</type>
</CustomField>