force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/FlowMatchingField__c.field-meta.xml
<CustomField>
    <fullName>FlowMatchingField__c</fullName>
    <description>A Unique field that helps when matching record in flows</description>
    <label>FlowMatchingField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>