force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/PerformanceFeeFormula__c.field-meta.xml
<CustomField>
    <fullName>PerformanceFeeFormula__c</fullName>
    <formula>Artist_Fee_Definition__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an indication of what the fee should be. The actual fee is taken from the Peformance Fee currency field and rolled up to the booking form</inlineHelpText>
    <label>PerformanceFeeFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>