force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/Technical_Fee__c.field-meta.xml
<CustomField>
    <fullName>Technical_Fee__c</fullName>
    <inlineHelpText>This is the technical fee for the given date. It is auto-populated via flow but can be adjusted manually</inlineHelpText>
    <label>Technical Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>