force-app/main/default/objects/Booking_Form_Fee_Definition__c/fields/TechnicalFeeFormula__c.field-meta.xml
<CustomField>
    <fullName>TechnicalFeeFormula__c</fullName>
    <formula>IF(ISPICKVAL( Booking_Form__r.Sound_supplied_by__c,&apos;Kunstenaar&apos;),
IF(ISPICKVAL(Booking_Form__r.Amount_of_People__c,&apos;1 - 500&apos;),
				 Artist_Fee_Definition__r.Technical_1_500_people__c,   Artist_Fee_Definition__r.Technical_501_1000_people__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an indication of what the technical fee should be. The actual fee is saved in the Technical Fee Currency field and rolled up to the Booking form</inlineHelpText>
    <label>TechnicalFeeFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>